--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-
 DATABASE_URL=
 SESSION_ID=
 REMOVEBG_KEY=
 PREFIX=
-MODE=
+MODE=pubic
 autoRead=
-statusview=
+statusview=true
+antidelete=true
+antilink=true
+autotype=true
