--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ SESSION_ID=
 REMOVEBG_KEY=
 PREFIX=
 MODE=pubic
-autoRead=
+autoRead=false
 statusview=true
 antidelete=true
-antilink=true
-autotype=true
+antilink=false
+autotype=false
