--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
         "awesome-phonenumber": "^3.4.0",
         "axios": "^1.4.0",
         "chalk": "^5.1.0",
-        "cheerio": "^1.0.0-rc.12",
+        "cheerio": "npm:cheerio@1.0.0-rc.12",
         "chess.js": "*",
         "colors": "1.4.0",
         "didyoumean": "^1.2.2",
